name:                docker
version:             0.3.0.0
synopsis:            An API client for docker written in Haskell
description:         See README.md
homepage:            https://github.com/denibertovic/docker-hs
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic <deni@denibertovic.com>, James Parker <jp@jamesparker.me>
maintainer:          Deni Bertovic <deni@denibertovic.com>
copyright:           BSD3
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           experimental

library
  default-extensions:          DeriveGeneric, OverloadedStrings, ScopedTypeVariables, ExplicitForAll, MultiParamTypeClasses, FlexibleContexts, GeneralizedNewtypeDeriving, RankNTypes, DeriveFunctor, FlexibleInstances
  hs-source-dirs:      src
  exposed-modules:     Docker.Client, Docker.Client.Api, Docker.Client.Types, Docker.Client.Internal, Docker.Client.Http
  -- other-modules:       Docker.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-builder
                     , bytestring
                     , containers
                     , data-default-class
                     , http-client
                     , http-types
                     , mtl
                     , network >= 2.6
                     , text
                     , time
                     , tls >= 1.3.7
                     , unordered-containers
                     , x509
                     , x509-store
                     , x509-system
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

test-suite docker-hs-tests
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , connection
                       , docker
                       , aeson
                       , containers
                       , unordered-containers
                       , http-client
                       , http-client-tls
                       , http-types
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
                       , text
                       , lens
                       , lens-aeson
                       , transformers
                       , QuickCheck
                       , process
    type:                exitcode-stdio-1.0
    main-is:             tests.hs
    hs-source-dirs:      tests
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/docker-hs
