name:                docker
version:             0.3.0.1
synopsis:            An API client for docker written in Haskell
description:         See API documentation below.
homepage:            https://github.com/denibertovic/docker-hs
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic <deni@denibertovic.com>, James Parker <jp@jamesparker.me>
maintainer:          Deni Bertovic <deni@denibertovic.com>
copyright:           BSD3
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           experimental

library
  default-extensions:          DeriveGeneric, OverloadedStrings, ScopedTypeVariables, ExplicitForAll, MultiParamTypeClasses, FlexibleContexts, GeneralizedNewtypeDeriving, RankNTypes, DeriveFunctor, FlexibleInstances
  hs-source-dirs:      src
  exposed-modules:     Docker.Client, Docker.Client.Api, Docker.Client.Types, Docker.Client.Internal, Docker.Client.Http, Docker.Client.Utils
  -- other-modules:       Docker.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.9.0 && < 1.1.0
                     , blaze-builder >= 0.4.0 && < 0.5.0
                     , bytestring >= 0.10.0 && < 0.11.0
                     , containers >= 0.5.0 && < 0.6.0
                     , data-default-class >= 0.0.1 && < 0.2.0
                     , http-client >= 0.4.0 && < 0.5.0
                     , http-types >= 0.9 && < 0.10.0
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , exceptions
                     , http-conduit
                     , monad-control
                     , resourcet
                     , transformers
                     , transformers-base
                     , tar
                     , zlib
                     , uuid
                     , temporary
                     , directory >= 1.2.5.0
                     , filemanip
                     , filepath
                     , mtl >= 2.0.0 && < 3.0.0
                     , network >= 2.6.0
                     , text >= 1.0.0 && < 2.0.0
                     , time >= 1.5.0 && < 1.7.0
                     , scientific >= 0.3.0 && < 0.4.0
                     , tls >= 1.3.7 && < 1.4.0
                     , unordered-containers >= 0.2.0 && < 0.3.0
                     , x509 >= 1.6.0 && < 1.7.0
                     , x509-store >= 1.6.0 && < 1.7.0
                     , x509-system >= 1.6.0 && < 1.7.0
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

test-suite docker-hs-tests
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , connection
                       , docker
                       , aeson
                       , containers
                       , unordered-containers
                       , http-client
                       , http-client-tls
                       , http-types
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
                       , text
                       , lens
                       , lens-aeson
                       , transformers
                       , QuickCheck
                       , process
    type:                exitcode-stdio-1.0
    main-is:             tests.hs
    hs-source-dirs:      tests
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/docker-hs
