name:                docker
version:             0.7.0.1
synopsis:            An API client for docker written in Haskell
description:         See API documentation below.
homepage:            https://github.com/denibertovic/docker-hs
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic <deni@denibertovic.com>, James Parker <jp@jamesparker.me>
maintainer:          Deni Bertovic <deni@denibertovic.com>
copyright:           BSD3
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           experimental

-- Flag small-http-conduit
--     Description: Resolve whether http-conduit < 2.3.0.
--     Manual: False
--     Default: True

library
  default-extensions:          DeriveGeneric, OverloadedStrings, ScopedTypeVariables, ExplicitForAll, MultiParamTypeClasses, FlexibleContexts, GeneralizedNewtypeDeriving, RankNTypes, DeriveFunctor, FlexibleInstances, CPP
  hs-source-dirs:      src
  exposed-modules:     Docker.Client, Docker.Client.Api, Docker.Client.Types, Docker.Client.Internal, Docker.Client.Http, Docker.Client.Utils
  -- other-modules:       Docker.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.9.0 && < 3.0.0
                     , blaze-builder >= 0.4.0 && < 0.5.0
                     , bytestring >= 0.10.0 && < 0.12.0
                     , containers >= 0.5.0 && < 0.7.0
                     , data-default-class >= 0.0.1 && < 0.2.0
                     , http-client >= 0.4.0 && < 0.8.0
                     , http-types >= 0.9 && < 0.13
                     , vector
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , exceptions
                     , monad-control
                     , resourcet
                     , transformers
                     , transformers-base
                     , tar
                     , zlib
                     , uuid
                     , temporary
                     , directory >= 1.2.5.0
                     , filemanip
                     , filepath
                     , mtl >= 2.0.0 && < 3.0.0
                     , network >= 2.6.0
                     , text >= 1.0.0 && < 2.0.0
                     , time >= 1.5.0 && < 2.0.0
                     , scientific >= 0.3.0 && < 0.4.0
                     , tls >= 1.3.7 && < 1.7.0
                     , unordered-containers >= 0.2.0 && < 0.3.0
                     , x509 >= 1.6.0 && < 1.8.0
                     , x509-store >= 1.6.0 && < 1.8.0
                     , x509-system >= 1.6.0 && < 1.8.0
                     , http-conduit
                     , unliftio-core >= 0.1.0.0 && < 0.3.0
  -- if flag(small-http-conduit)
  --     build-depends: http-conduit < 2.3.0
  -- else
  --     build-depends: http-conduit >= 2.3.0
  --                  , unliftio-core
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

test-suite docker-hs-tests
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , connection
                       , docker
                       , directory
                       , aeson
                       , containers
                       , unordered-containers
                       , http-client
                       , http-client-tls
                       , http-types
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
                       , text
                       , lens
                       , lens-aeson
                       , transformers
                       , QuickCheck
                       , process
                       , vector
    type:                exitcode-stdio-1.0
    main-is:             tests.hs
    hs-source-dirs:      tests
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/docker-hs
